--- a/employee-directory/src/Components/EmployeeCard/style.css
+++ b/employee-directory/src/Components/EmployeeCard/style.css
@@ -4,5 +4,11 @@
 
 .card-header{
     text-align:center;
-    background-color: rgb(14, 167, 80)
+    background-color: midnightblue;
+    border-bottom: 4px solid rgb(172, 36, 36)
+}
+.email-btn{
+    background-color:rgb(172, 36, 36);
+    border: rgb(172, 36, 36);
+    color:#fff;
 }
