--- a/employee-directory/src/Components/PageHeader/style.css
+++ b/employee-directory/src/Components/PageHeader/style.css
@@ -1,3 +1,6 @@
 .page-header{
     text-align:center;
+    background-color: midnightblue;
+    border-bottom: 5px solid rgb(172, 36, 36);
+    color: #fff;
 }
